fix text overflow

--- a/src/app/live-room/live-room-info/live-room-info.component.scss
+++ b/src/app/live-room/live-room-info/live-room-info.component.scss
@@ -56,6 +56,7 @@
     margin-top: 33px;
     position: relative;
     padding-bottom: 60px;
+    overflow: hidden;
 
     &:after {
       position: absolute;
@@ -71,12 +72,13 @@
     }
 
     .talent {
-      display: inline-flex;
+      display: flex;
       margin-left: 23px;
       height: 24px;
       font-size: 14px;
       color: rgb(158, 161, 165);
       letter-spacing: 0px;
+      overflow: hidden;
 
       .talent-avatar {
         height: 100%;
@@ -88,7 +90,9 @@
         padding-top: 3px;
         font-size: 14px;
         color: rgb(158, 161, 165);
-        letter-spacing: 0px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
 
@@ -99,6 +103,7 @@
       color: rgba(75, 75, 75, 1);
       letter-spacing: 0.58px;
       line-height: 28px;
+      word-break: break-all;
     }
 
     .words {
@@ -108,6 +113,7 @@
       color: rgba(75, 75, 75, 1);
       letter-spacing: 0px;
       line-height: 24px;
+      word-break: break-all;
     }
   }
   .button-wrapper {
